# git-dojo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
logs/: README.md  level-01-plumbing-basics-content-addressing.md  level-01-plumbing-basics.md  level-02-diff-blame-mastery-blame-ignore-rev.md  level-03-git-notes.md  level-04-interactive-rebase-fixup-autosquash.md  level-05-rebase-onto-reparenting-a-branch.md  level-06-splitting-a-commit.md  level-07-git-bisect.md  level-08-reflog-recovery.md
src/gitdojo/: __init__.py  __main__.py  cli.py  quotes.json  sandbox.py  state.py
src/gitdojo/levels/: __init__.py  level_01.py  level_02.py  level_03.py  level_04.py  level_05.py  level_06.py  level_07.py  level_08.py  level_09.py  level_10.py  level_11.py  level_12.py  level_13.py  level_14.py  level_15.py  level_16.py  level_17.py  level_18.py  level_19.py  level_20.py  level_21.py  level_22.py  level_23.py  level_24.py  level_25.py
tests/: test_cli.py  test_level_01.py  test_level_02.py  test_level_03.py  test_level_04.py  test_level_05.py  test_level_06.py  test_level_07.py  test_level_08.py  test_level_09.py  test_level_10.py  test_level_11.py  test_level_12.py  test_level_13.py  test_level_14.py  test_level_15.py  test_level_16.py  test_level_17.py  test_level_18.py  test_level_19.py  test_level_20.py  test_level_21.py  test_level_22.py
