[project]
name = "gitdojo"
version = "0.1.0"
description = "Disposable toy CLI used to practice Git/GitHub techniques"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gitdojo = ["quotes.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
