[project]
name = "gitdojo"
version = "0.1.0"
description = "Interactive trainer for advanced Git/GitHub techniques"
requires-python = ">=3.10"

[project.scripts]
gitdojo = "gitdojo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
